@@ -1,3 +1,8 @@
+Wed Oct  5 14:27:36 2016  Byron Bowerman  <me@bm5k.com>
+
+	* range.c: Add docs for max/min behavior with exclusive range.
+	  [fix GH-1433][ci skip] Patch by @BM5k
+
 Wed Oct  5 12:57:21 2016  Richard Schneeman  <richard.schneeman+foo@gmail.com>
 
 	* ext/socket/*.c: Add proper require for example to work.
